--- a/templates/home/show.html.twig
+++ b/templates/home/show.html.twig
@@ -1,22 +1,43 @@
 {% extends 'base.html.twig' %}
 
 {% block body%}
+{% if not app.user %}
 <article>
-    {% if not app.user %}
     <h2>{{projet.title}}</h2>
-    <div class="content">
-        <img src="{{projet.image}}" alt="">
-        {{projet.description | raw}}
-        {% else %}
-        <h2>{{projet.title}}</h2>
-    <div class="content">
-        <img src="{{projet.image}}" alt="">
-        {{projet.description | raw}}
-        <a href="{{ path('home_edit', {'id': projet.id})}}" class="btn btn-primary">Modifier</a>
-        <a href="{{ path('remove_project', {'id': projet.id})}}" class="btn btn-primary">Supprimer</a>
-        
+    <div class="container">
+        <div class="row">
+            <div class="col-12 d-flex justify-content-center">
+                <img src="{{projet.image}}" alt="">
+            </div>
+            <div class="col-12 mt-5">
+                {{projet.description | raw}}
+            </div>
+        </div>
     </div>
-    </div>  
 </article>
+{% else %}
+<article>
+    <h2 class="my-4">{{projet.title}}</h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 d-flex justify-content-center">
+                    <img src="{{projet.image}}" alt="">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12 d-flex justify-content-center">
+                    <a href="{{ path('home_edit', {'id': projet.id})}}" class="btn btn-primary mt-2 mr-2">Modifier</a>
+                    <a href="{{ path('remove_project', {'id': projet.id})}}" class="btn btn-primary mt-2">Supprimer</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 mt-5">
+                    {{projet.description | raw}}
+                </div>
+            </div>
+        </div>
+</article>
+
 {% endif %}
 {% endblock %}
